<resources>
    <string name="app_name">AppStoryQu</string>
    <string name="pembuat_aplikasi">Muhammad Alfin Nugroho</string>
    <string name="login">Masuk</string>
    <string name="signup">Daftar</string>
    <string name="title_welcome_page">Selamat Datang di Aplikasi Cerita</string>
    <string name="message_welcome_page">Aplikasi ini merupakan Project Submission Android Intermediate. Project Submission ini dibuat oleh Muhammad Alfin Nugroho</string>
    <string name="title_login_page">Masukkan Data Diri Yang Sudah Anda Buat</string>
    <string name="message_login_page">Pastikan Anda Telah Memasukkan Data Diri Dengan Benar</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_signup_page">Silahkan Isi Data Diri Anda Disini</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Assalamualaikum</string>
    <string name="logout">Keluar</string>
    <string name="success">Berhasil</string>
    <string name="success_create_acc">Akun Anda Berhasil Dibuat</string>
    <string name="continue_login">Masuk</string>
    <string name="title_detail">Detail Cerita</string>
    <string name="continue_main">Lanjut</string>
    <string name="success_login">Selamat Anda sudah berhasil login, silahkan mulai membagikan cerita anda disini</string>
    <string name="email_error">Silahkan masukkan sesuai dengan format email</string>
    <string name="password_error">Password harus terdiri dari 8 karakter</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="posting">Posting</string>
    <string name="Description">Deskripsikan Cerita Anda</string>
    <string name="title_posting">Posting Cerita</string>
    <string name="description_empty">Masukkan kata-kata kamu disini dulu yukk</string>
    <string name="image_empty">Tambahkan Foto dulu yukk</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="maps_title">Maps Activity</string>
    <string name="rto">Request Time Out</string>
    <string name="ulang">Coba Lagi</string>
    <string name="enable_gps">Lokasi pada perangkat anda belum aktif</string>
    <string name="enable_gps_message">Tolong nyalakan lokasi pada perangkat terlebih dahulu</string>
    <string name="lanjut">Selanjutnya</string>
    <string name="tidaklanjut">Batalkan</string>
    <string name="error_no_location">Tidak ada lokasi</string>
</resources>